--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 			  <!-- links -->
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="#" data-scroll-nav="0" class="active">Beranda</a></li>
-		        <li><a href="#" data-scroll-nav="1">Tentang Saya</a></li>
-		        <li><a href="#" data-scroll-nav="3">Kemampuan</a></li>
-		        <li><a href="#" data-scroll-nav="2">Gallery</a></li>
-				<li><a href="#" data-scroll-nav="Y">Riwayat</a></li>
-		        <li><a href="#" data-scroll-nav="4">Kontak</a></li>
+		        <li><a href="#about" data-scroll-nav="1">Tentang Saya</a></li>
+		        <li><a href="#skill" data-scroll-nav="3">Kemampuan</a></li>
+		        <li><a href="#galeri" data-scroll-nav="2">Gallery</a></li>
+			<li><a href="#riwayat" data-scroll-nav="Y">Riwayat</a></li>
+		        <li><a href="#kontak" data-scroll-nav="4">Kontak</a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container -->
@@ -116,7 +116,7 @@
 		<!-- ====== End Header ======  -->
 
 		<!-- ====== Hero ======  -->
-		<section class="hero section-padding pb-70" data-scroll-index="1">
+		<section class="hero section-padding pb-70" data-scroll-index="1" id="#about">
 			<div class="container">
 				<div class="row">
 
@@ -143,7 +143,7 @@
 		<!-- ====== End Hero ======  -->
 
 		<!-- ====== Services ======  -->
-		<section class="services section-padding bg-gray text-center pb-70" data-scroll-index="3">
+		<section class="services section-padding bg-gray text-center pb-70" data-scroll-index="3" id="#skill">
 			<div class="container">
 
 				<!-- section heading -->
@@ -181,7 +181,7 @@
 		<!-- ====== End Services ======  -->
 
 		<!-- ====== Services ======  -->
-		<section class="services section-padding bg-gray text-center pb-70" data-scroll-index="Y">
+		<section class="services section-padding bg-gray text-center pb-70" data-scroll-index="Y" id="#riwayat">
 			<div class="container">
 
 				<!-- section heading -->
@@ -215,11 +215,11 @@
 					</div>
 				</div><!-- /row -->
 			</div><!-- /container -->
-		</section>
+		</section>'
 		<!-- ====== End Services ======  -->
 
 		<!--====== Portfolio ======-->
-		<section class="portfolio section-padding pb-70" data-scroll-index="2">
+		<section class="portfolio section-padding pb-70" data-scroll-index="2" id="#galeri">
 			<div class="container">
 				<div class="row">
 
@@ -319,7 +319,7 @@
 		
 
 		<!--====== Contact ======-->
-		<section class="contact section-padding" data-scroll-index="4">
+		<section class="contact section-padding" data-scroll-index="4" id="kontak">
 			<div class="container">
 				<div class="row">
 					
